# ai_digest

./: .gitignore  bot.py  email_sender.py  main.py  pyproject.toml
.github/workflows/: weekly-bot.yml
workflows/: weekly-bot.yml
