[project]
name = "ai-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "google>=3.0.0",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-genai>=1.47.0",
]
